FIX ALIGN BUTTON AND IMAGE URL AND ADD OTHERS PHOTOS TO FOLDER

--- a/client/LEGACY/src/app/main/main.component.css
+++ b/client/LEGACY/src/app/main/main.component.css
@@ -1,9 +1,3 @@
-/*!
- * Start Bootstrap - Landing Page v5.0.8 (https://startbootstrap.com/themes/landing-page)
- * Copyright 2013-2020 Start Bootstrap
- * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-landing-page/blob/master/LICENSE)
- */
-
 body {
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -21,7 +15,7 @@ h6 {
 header.masthead {
   position: relative;
   background-color: #343a40;
-  background: url("https://images.pexels.com/photos/132037/pexels-photo-132037.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260")
+  background: url("https://images.unsplash.com/photo-1580134034476-4246b545a4d3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=80")
     no-repeat center center;
   background-size: cover;
   padding-top: 8rem;
@@ -42,7 +36,7 @@ header.masthead h1 {
   font-size: 2rem;
 }
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   header.masthead {
     padding-top: 12rem;
     padding-bottom: 12rem;
@@ -50,10 +44,11 @@ header.masthead h1 {
   header.masthead h1 {
     font-size: 3rem;
   }
-}
+} */
 
 .showcase .showcase-text {
   padding: 3rem;
+  margin-bottom: 30px;
 }
 
 .showcase .showcase-img {
@@ -65,27 +60,6 @@ header.masthead h1 {
   .showcase .showcase-text {
     padding: 7rem;
   }
-}
-
-.features-icons {
-  padding-top: 7rem;
-  padding-bottom: 7rem;
-}
-
-.features-icons .features-icons-item {
-  max-width: 20rem;
-}
-
-.features-icons .features-icons-item .features-icons-icon {
-  height: 7rem;
-}
-
-.features-icons .features-icons-item .features-icons-icon i {
-  font-size: 4.5rem;
-}
-
-.features-icons .features-icons-item:hover .features-icons-icon i {
-  font-size: 5rem;
 }
 
 .testimonials {
@@ -133,4 +107,12 @@ footer.footer {
 
 #buttonLOGIN-2 {
   margin-left: 250px;
+}
+
+.jumbotron {
+  margin-bottom: 0em;
+}
+
+.navbar-brand {
+  margin-right: 850px;
 }
